--- a/index.html
+++ b/index.html
@@ -138,6 +138,19 @@
       </div>
     </section>
 
+    <section id="map" style="text-align:center;">
+      <h2>Our Location</h2>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2655.1524489512415!2d16.4987385!3d48.2248383!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476d0108e1abe8a1%3A0x43de94c929e05dc1!2sDR%20Bike!5e0!3m2!1sen!2sat!4v1691579910532!5m2!1sen!2sat"
+        width="80%"
+        height="450"
+        style="border:0; display:block; margin: 0 auto;"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </section>
+
     <section id="faq" class="tint-peach section-puzzle flip">
       <div class="container">
         <h2>Häufige Fragen</h2>
