--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <section id="map" style="text-align:center;">
       <h2>Our Location</h2>
       <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2655.1524489512415!2d16.4987385!3d48.2248383!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476d0108e1abe8a1%3A0x43de94c929e05dc1!2sDR%20Bike!5e0!3m2!1sen!2sat!4v1691579910532!5m2!1sen!2sat"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2655.160512365671!2d16.4988694!3d48.2248476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476d0108e1eb7f89%3A0x918f77d1f4b76ce8!2sMaria-Tusch-Stra%C3%9Fe%209%2C%201220%20Wien!5e0!3m2!1sen!2sat!4v1691580000000!5m2!1sen!2sat"
         width="80%"
         height="450"
         style="border:0; display:block; margin: 0 auto;"
